--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tech-blog",
+  "name": "helper",
   "version": "1.0.0",
   "description": "## Your Task",
   "main": "server.js",
@@ -28,5 +28,6 @@
     "express-session": "^1.17.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.4"
-  }
+  },
+  "devDependencies": {}
 }
