--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "helper",
+  "name": "pg",
   "version": "1.0.0",
-  "description": "## Your Task",
+  "description": " ",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
+    "pg": "^8.6.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.4"
   },
